📃docs(pricing): plans & billing

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -239,7 +239,7 @@
         "sidebar_label": "Plans"
       },
       "plans-and-billing/upgrading": {
-        "title": "Upgrading your Plan",
+        "title": "Upgrading your plan",
         "sidebar_label": "Upgrading"
       },
       "release-notes": {
