📃 doc(kintoblocks): introduction rewrite

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -216,7 +216,7 @@
         "title": "Helm Arguments"
       },
       "kintoblocks/introduction": {
-        "title": "Introduction to KintoBlocks",
+        "title": "Introducing KintoBlocks",
         "sidebar_label": "Introduction"
       },
       "kintoblocks/introduction2": {
