--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -86,6 +86,10 @@
       "_legacy/workspaces": {
         "title": "Workspaces"
       },
+      "examples/hasura/tutorial": {
+        "title": "Multi-environment Hasura",
+        "sidebar_label": "Multi-env Hasura"
+      },
       "examples/todo-list/tutorial": {
         "title": "Todo List example app",
         "sidebar_label": "Todo List App"
@@ -102,8 +106,14 @@
       "features/building/branches-and-tags": {
         "title": "Branches & Tags"
       },
+      "features/building/build-arguments": {
+        "title": "Build Arguments"
+      },
       "features/building/continuous-integration": {
         "title": "Continuous Integration"
+      },
+      "features/building/helm-arguments": {
+        "title": "Helm Arguments"
       },
       "features/building/manage-blocks": {
         "title": "Manage KintoBlocks"
@@ -189,9 +199,6 @@
       "kintoblocks/custom-services": {
         "title": "Custom Service KintoBlock",
         "sidebar_label": "Custom Services"
-      },
-      "kintoblocks/helm-arguments": {
-        "title": "Helm Arguments"
       },
       "kintoblocks/introduction": {
         "title": "Introducing KintoBlocks",
