--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -213,6 +213,10 @@
       "kintoblocks/introduction2": {
         "title": "KintoBlocks"
       },
+      "kintoblocks/jobs": {
+        "title": "Job KintoBlock",
+        "sidebar_label": "Job"
+      },
       "kintoblocks/microservices": {
         "title": "Microservice KintoBlock",
         "sidebar_label": "Microservices"
