--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -86,6 +86,10 @@
       "_legacy/workspaces": {
         "title": "Workspaces"
       },
+      "examples/go/fasthttp": {
+        "title": "FastHttp Example",
+        "sidebar_label": "FastHttp"
+      },
       "examples/hasura/tutorial": {
         "title": "Hasura",
         "sidebar_label": "Hasura"
@@ -109,6 +113,10 @@
       "examples/nodejs/koa": {
         "title": "Koa Example",
         "sidebar_label": "Koa"
+      },
+      "examples/python/flask": {
+        "title": "Flask Example",
+        "sidebar_label": "Flask"
       },
       "examples/static-website/tutorial": {
         "title": "Serve Static Files"
