--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -215,8 +215,7 @@
         "title": "Environment Variables"
       },
       "features/deploying/high-availability": {
-        "title": "High Availability",
-        "sidebar_label": "High Availability"
+        "title": "High Availability"
       },
       "features/deploying/manage-environments": {
         "title": "Manage Environments"
@@ -284,10 +283,6 @@
         "title": "Deploy your first Ruby app",
         "sidebar_label": "Ruby"
       },
-      "kintoblocks/build-logs": {
-        "title": "Build Logs",
-        "sidebar_label": "Build Logs"
-      },
       "kintoblocks/custom-services": {
         "title": "Custom Service KintoBlock",
         "sidebar_label": "Custom Services"
@@ -298,6 +293,9 @@
       "kintoblocks/introduction": {
         "title": "Introducing KintoBlocks",
         "sidebar_label": "Introduction"
+      },
+      "kintoblocks/introduction2": {
+        "title": "KintoBlocks"
       },
       "kintoblocks/jobs": {
         "title": "Job KintoBlock",
